# qtsignalgraph

./: CMakeLists.txt  README.md  main.cpp
include/: QSignalBaseJunction.hpp  QSignalBaseJunction.tpp  QSignalBinJunction.hpp  QSignalBinJunction.tpp  QSignalConjunction.hpp  QSignalConjunction.tpp  QSignalDetails.hpp  QSignalDisjunction.hpp  QSignalDisjunction.tpp  QSignalGraph.hpp  QSignalSource.hpp
include/details/: function_traits.hpp
samples/: CMakeLists.txt
samples/network/: CMakeLists.txt  main.cpp
src/: QSignalBinJunction.cpp  QSignalConjunction.cpp  QSignalDisjunction.cpp  QSignalGraph.cpp  QSignalSource.cpp
tests/: CMakeLists.txt  TestObject.cpp  TestObject.hpp  argforwarding-test.cpp  basic-test.cpp  binary-junction-test.cpp  conjunction-test.cpp  disjunction-test.cpp  graph-test.cpp  traits-test.cpp
